# consciousness

./: .gitignore  DESIGN.md  bridge.py  main.py
consciousness-3d/: index.html  main.js  package-lock.json  package.json  preload.js
consciousness-3d/src/: app.js  interactions.js  ipc.js  physics.js
consciousness-3d/src/animation/: animator.js  locomotion.js  procedural.js
consciousness-3d/src/behavior/: behaviors.js  scorer.js  stateMachine.js
consciousness-3d/src/character/: materials.js  model.js  skeleton.js
consciousness-3d/src/environment/: events.js  particles.js
consciousness-3d/src/hud/: detailPanel.js  hud.js  miniPanel.js
consciousness-3d/src/scene/: lighting.js  room.js
consciousness-3d/src/state/: interpolator.js  store.js
core/: __init__.py  analyzer.py  config.py  dynamics.py  energy.py  engine.py  environment.py  interrelations.py  memory.py  personality.py  visualization.py
native/: Cargo.toml
native/src/: analyzer.rs  behavior.rs  config.rs  dynamics.rs  energy.rs  engine.rs  environment.rs  interrelations.rs  lib.rs  memory.rs  personality.rs  rng.rs  serialize.rs
