[package]
name = "consciousness-native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", features = ["napi9", "serde-json"] }
napi-derive = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smallvec = "1"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = true
